--- a/Melanoma/res/layout/activity_melanoma.xml
+++ b/Melanoma/res/layout/activity_melanoma.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="onCaptureteste"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -37,6 +36,6 @@
         android:layout_marginLeft="43dp"
         android:layout_toRightOf="@+id/buttonc1"
         android:onClick="onCaptureteste"
-        android:text="@string/capture_image_text" />
+        android:text="@string/jump_rel_img" />
     
 </RelativeLayout>
