--- a/Melanoma/res/layout/activity_select_specific_region.xml
+++ b/Melanoma/res/layout/activity_select_specific_region.xml
@@ -1,7 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,96 +9,54 @@
     tools:context="br.furb.melanoma.SelectSpecificRegion" >
 
     <FrameLayout
-        android:id="@+id/frameLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" >
+        android:id="@+id/FrameFixImage"
+        android:layout_width="434dp"
+        android:layout_height="228dp"
+        android:layout_alignTop="@+id/RelativeLayout1"
+        android:layout_centerHorizontal="true" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="1000dp"
-            android:layout_height="555dp"
-            android:src="@drawable/a1" />
+        <br.furb.melanoma.CustomImageView
+            android:id="@+id/imageViewFixImages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/item_alerta"
+            android:layout_width="136dp"
+            android:layout_height="163dp"
+            android:padding="10sp"
+            android:textColor="#FF000000"
+            android:textSize="20sp" />
+
     </FrameLayout>
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/frameLayout1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/frameLayout1"
-        android:layout_alignTop="@+id/frameLayout1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="26dp"
-        android:layout_marginTop="542dp" >
+    <FrameLayout
+        android:id="@+id/FrameExistImages"
+        android:layout_width="434dp"
+        android:layout_height="228dp"
+        android:layout_alignBottom="@+id/RelativeLayout1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="59dp" >
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageViewExistImages"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal" >
-	
-            <ImageView
-                android:id="@+id/ImageView10"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
-            <ImageView
-                android:id="@+id/ImageView09"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-            
-            <ImageView
-                android:id="@+id/ImageView08"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/ImageView07"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/ImageView06"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/ImageView05"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/ImageView04"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/ImageView03"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/ImageView02"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/ImageView01"
-                android:layout_width="125dp"
-                android:layout_height="match_parent"
-                android:padding="15dp" />
-
-        </LinearLayout>
-    </HorizontalScrollView>
+        <ListView
+            android:id="@+id/listView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+    </RelativeLayout>
 
 </RelativeLayout>
