--- a/Melanoma/res/layout/activity_melanoma.xml
+++ b/Melanoma/res/layout/activity_melanoma.xml
@@ -1,41 +1,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MelanomaActivity" >
-    
-    <Button
-        android:id="@+id/buttonc1"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="82dp"
+            android:text="@string/novo_paciente"
+            android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/buttonc1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:onClick="onCaptureImageButtonClicked"
+            android:text="@string/novo"
+            android:textSize="30sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="@string/capture_image_text" 
-        android:onClick="onCaptureImageButtonClicked"/>
+        android:layout_alignRight="@+id/linearLayout2"
+        android:layout_marginRight="26dp"
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/buttona1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonc1"
-        android:layout_alignRight="@+id/buttonc1"
-        android:layout_below="@+id/buttonc1"
-        android:layout_marginTop="45dp"
-        android:onClick="onCaptureMapCorpButtonClicked"
-        android:text="@string/jump_map_corporal" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/selecionar_paciente"
+            android:textSize="40sp" />
 
-    <Button
-        android:id="@+id/Button01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttona1"
-        android:layout_marginLeft="43dp"
-        android:layout_toRightOf="@+id/buttonc1"
-        android:onClick="onCaptureteste"
-        android:text="@string/jump_rel_img" />
-    
+        <ListView
+            android:id="@+id/listViewPacientes"
+            android:layout_width="match_parent"
+            android:layout_height="163dp"
+            android:layout_marginLeft="17dp" >
+        </ListView>
+    </LinearLayout>
+
 </RelativeLayout>
