--- a/Melanoma/res/layout/listview_child_melanoma.xml
+++ b/Melanoma/res/layout/listview_child_melanoma.xml
@@ -4,25 +4,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:paddingTop="4dp"
+    android:paddingTop="0dp"
     android:paddingBottom="4dp"
     android:layout_marginLeft="50dp">
 
     <TextView
-        android:id="@+id/country_name"
+        android:id="@+id/image_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/flag"
-        android:layout_marginBottom="14dp"
-        android:layout_marginLeft="29dp"
-        android:layout_toRightOf="@+id/flag"
+        android:layout_alignBottom="@+id/melanoma_photo"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/melanoma_photo"
         android:text="TextView"
-        android:textSize="20dp" />
+        android:textSize="12dp" />
 
     <ImageView
-        android:id="@+id/flag"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
+        android:id="@+id/melanoma_photo"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="27dp"
