--- a/Melanoma/res/layout/activity_seleciona_regiao_corporal.xml
+++ b/Melanoma/res/layout/activity_seleciona_regiao_corporal.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.furb.melanoma.SelecionaRegiaoCorporal">
+    tools:context="br.furb.melanoma.SelectBodyPart">
 
     <TextView
         android:id="@+id/textView1"
