--- a/Melanoma/res/layout/activity_select_specific_region.xml
+++ b/Melanoma/res/layout/activity_select_specific_region.xml
@@ -12,29 +12,36 @@
         android:id="@+id/FrameFixImage"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_centerVertical="true" >
+        android:layout_centerVertical="true"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:layout_weight="0.04"
+            android:text="Pressione na figura abaixo a posição em que deseja inserir uma nova imagem:"
+            android:textSize="35sp" />
 
         <br.furb.melanoma.CustomImageView
             android:id="@+id/imageViewFixImages"
             android:layout_width="651dp"
             android:layout_height="344dp"
-            android:layout_gravity="center_vertical" />
-    </LinearLayout>
+            android:baselineAlignBottom="false" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/ExpandableListViewFixImages"
-        android:onClick="screenRefresh"
-        android:text="Atualizar Pontos" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:layout_weight="0.04"
+            android:textSize="35sp" />
+
+    </LinearLayout>
 
     <ExpandableListView
         android:id="@+id/ExpandableListViewFixImages"
         android:layout_width="200dp"
-        android:layout_height="331dp"
+        android:layout_height="344dp"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/FrameFixImage" >
     </ExpandableListView>
